• Fixed a couple of my own Stylus synatx mistakes (again, whitespace related); added FG-Line inputs to the Contact Us form, added Phone number too;

--- a/client/templates/popUp/checkAvailability/checkAvailability.styl
+++ b/client/templates/popUp/checkAvailability/checkAvailability.styl
@@ -6,6 +6,9 @@
       padding 5%
     @media screen and (min-width: 992px)
       padding 6%
+    @media screen and (min-width: 1200px)
+      padding 20px 30px
+
     .modal-header
       border 0 none
       font-family 'Montserrat', Helvetica, sans-serif
@@ -13,8 +16,8 @@
       color #272b30
       box-sizing border-box
       padding 0 0 10px
-        @media screen and (min-width: 768px)
-          padding 0 0 14px
+      @media screen and (min-width: 768px)
+        padding 0 0 14px
       .close i
         color #272b30
         @media screen and (min-width: 768px)
