--- a/client/templates/popUp/contactUs/contactUs.styl
+++ b/client/templates/popUp/contactUs/contactUs.styl
@@ -19,8 +19,6 @@
       box-sizing border-box
       padding 0 0 5px
       padding-top 0
-      padding-left 1pz
-      font-size 17.5px
         @media screen and (min-width: 768px)
           padding 0 0 10px
       .modal-title
